force-app/main/default/objects/Krow__Project_Baseline__c/Krow__Project_Baseline__c.object-meta.xml
<CustomObject>
    <label>Project Baseline</label>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Baseline</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>