force-app/main/default/objects/Krow__Project_Baseline__c/fields/Krow__Act_VS_Est_Budget__c.field-meta.xml
<CustomField>
    <fullName>Krow__Act_VS_Est_Budget__c</fullName>
    <label>Act vs Est Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>