force-app/main/default/objects/Krow__Project_Baseline__c/fields/Krow__Actual_Billed__c.field-meta.xml
<CustomField>
    <fullName>Krow__Actual_Billed__c</fullName>
    <description>Actual Billed : Roll up the Bill Rate Actuals</description>
    <label>Deprecated3</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>