force-app/main/default/objects/Krow__Project_Baseline__c/fields/Krow__Archived__c.field-meta.xml
<CustomField>
    <fullName>Krow__Archived__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Archived</label>
    <type>Checkbox</type>
</CustomField>