force-app/main/default/objects/Krow__Project_Baseline__c/fields/Krow__Billable_Amount_Logged__c.field-meta.xml
<CustomField>
    <fullName>Krow__Billable_Amount_Logged__c</fullName>
    <label>Billable Amount(Logged)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>