force-app/main/default/objects/Krow__Project_Baseline__c/fields/Krow__Billing_Type__c.field-meta.xml
<CustomField>
    <fullName>Krow__Billing_Type__c</fullName>
    <label>Billing Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>