force-app/main/default/objects/Krow__Project_Baseline__c/fields/Krow__Bottom_Up_Planning__c.field-meta.xml
<CustomField>
    <fullName>Krow__Bottom_Up_Planning__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bottom-Up Planning</label>
    <type>Checkbox</type>
</CustomField>