force-app/main/default/objects/Krow__Project_Baseline__c/fields/Krow__Color__c.field-meta.xml
<CustomField>
    <fullName>Krow__Color__c</fullName>
    <description>This is color code for the project tasks</description>
    <label>Color</label>
    <length>7</length>
    <type>Text</type>
</CustomField>