force-app/main/default/objects/Krow__Project_Baseline__c/fields/Krow__Complete_Hours__c.field-meta.xml
<CustomField>
    <fullName>Krow__Complete_Hours__c</fullName>
    <label>Complete - Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>