force-app/main/default/objects/Krow__Project_Baseline__c/fields/Krow__Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Krow__Completion_Date__c</fullName>
    <label>Completion Date</label>
    <type>Date</type>
</CustomField>