force-app/main/default/objects/Krow__Project_Baseline__c/fields/Krow__Completion_Method__c.field-meta.xml
<CustomField>
    <fullName>Krow__Completion_Method__c</fullName>
    <description>Determines how to calculate the % Complete on a Project.</description>
    <label>Completion % Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Task Completion</fullName>
                <default>true</default>
                <label>Task Completion</label>
            </value>
            <value>
                <fullName>Hours Incurred (Planned)</fullName>
            </value>
            <value>
                <fullName>Hours Incurred (EAC)</fullName>
            </value>
            <value>
                <fullName>Milestone</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>