force-app/main/default/objects/Krow__Project_Baseline__c/fields/Krow__Contact__c.field-meta.xml
<CustomField>
    <fullName>Krow__Contact__c</fullName>
    <description>Primary contact related to project&apos;s company</description>
    <label>Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>