force-app/main/default/objects/Krow__Project_Baseline__c/fields/Krow__Create_Project_in_JIRA__c.field-meta.xml
<CustomField>
    <fullName>Krow__Create_Project_in_JIRA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Project in JIRA</label>
    <type>Checkbox</type>
</CustomField>