force-app/main/default/objects/Krow__Project_Baseline__c/fields/Krow__Custom_Complete_To_test_only__c.field-meta.xml
<CustomField>
    <fullName>Krow__Custom_Complete_To_test_only__c</fullName>
    <label>Custom Complete % (To test only)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>