force-app/main/default/objects/Krow__Project_Baseline__c/fields/Krow__Deferred_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Krow__Deferred_Revenue__c</fullName>
    <label>Deferred Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>