force-app/main/default/objects/Krow__Project_Baseline__c/fields/Krow__Est_vs_Sch_Hours__c.field-meta.xml
<CustomField>
    <fullName>Krow__Est_vs_Sch_Hours__c</fullName>
    <description>Roll-up of all Est vs Sch Hours of project tasks.</description>
    <label>Est vs Sch Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>