force-app/main/default/objects/Krow__Project_Baseline__c/fields/Krow__Estimated_Hours_at_Completion__c.field-meta.xml
<CustomField>
    <fullName>Krow__Estimated_Hours_at_Completion__c</fullName>
    <label>Estimated Hours at Completion</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>