force-app/main/default/objects/Krow__Project_Baseline__c/fields/Krow__Estimated_Hours_To_Complete__c.field-meta.xml
<CustomField>
    <fullName>Krow__Estimated_Hours_To_Complete__c</fullName>
    <description>Sum of all related task&apos;s Estimated Hours To Complete field</description>
    <label>Estimated Hours To Complete</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>