force-app/main/default/objects/Krow__Project_Baseline__c/fields/Krow__Estimated_Project_Hours__c.field-meta.xml
<CustomField>
    <fullName>Krow__Estimated_Project_Hours__c</fullName>
    <label>Estimated Project Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>