force-app/main/default/objects/Krow__Project_Baseline__c/fields/Krow__Estimated_Revenue_At_Completion__c.field-meta.xml
<CustomField>
    <fullName>Krow__Estimated_Revenue_At_Completion__c</fullName>
    <label>Estimated Revenue At Completion</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>