force-app/main/default/objects/Krow__Project_Baseline__c/fields/Krow__Expected_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Krow__Expected_Revenue__c</fullName>
    <label>Expected Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>