force-app/main/default/objects/Krow__Project_Baseline__c/fields/Krow__Expense_Cost__c.field-meta.xml
<CustomField>
    <fullName>Krow__Expense_Cost__c</fullName>
    <label>Expense Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>