force-app/main/default/objects/Krow__Project_Baseline__c/fields/Krow__Global_Project__c.field-meta.xml
<CustomField>
    <fullName>Krow__Global_Project__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Global Project</label>
    <type>Checkbox</type>
</CustomField>