force-app/main/default/objects/Krow__Project_Baseline__c/fields/Krow__Hours_Completion_Percent__c.field-meta.xml
<CustomField>
    <fullName>Krow__Hours_Completion_Percent__c</fullName>
    <label>Hours Completion %</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Task Estimated</fullName>
            </value>
            <value>
                <fullName>Task Scheduled</fullName>
            </value>
            <value>
                <fullName>Project Estimated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>