force-app/main/default/objects/Krow__Project_Baseline__c/fields/Krow__Hours_Remaining_Estimated__c.field-meta.xml
<CustomField>
    <fullName>Krow__Hours_Remaining_Estimated__c</fullName>
    <label>Hours Remaining Estimated</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>