force-app/main/default/objects/Krow__Project_Baseline__c/fields/Krow__Include_in_Rev_Rec__c.field-meta.xml
<CustomField>
    <fullName>Krow__Include_in_Rev_Rec__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include in Rev Rec</label>
    <type>Checkbox</type>
</CustomField>