force-app/main/default/objects/Krow__Project_Baseline__c/fields/Krow__Include_in_Utilization__c.field-meta.xml
<CustomField>
    <fullName>Krow__Include_in_Utilization__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Include in Utilization</label>
    <type>Checkbox</type>
</CustomField>