force-app/main/default/objects/Krow__Project_Baseline__c/fields/Krow__Include_Weekend__c.field-meta.xml
<CustomField>
    <fullName>Krow__Include_Weekend__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, all tasks can start from any week day, else it will skip weekends(Sat-Sun).</description>
    <label>Include Weekend</label>
    <type>Checkbox</type>
</CustomField>