force-app/main/default/objects/Krow__Project_Baseline__c/fields/Krow__Intacct_Project_Id__c.field-meta.xml
<CustomField>
    <fullName>Krow__Intacct_Project_Id__c</fullName>
    <description>Intacct project id received from intacct</description>
    <label>Intacct Project Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>