force-app/main/default/objects/Krow__Project_Baseline__c/fields/Krow__Intacct_Record_Number__c.field-meta.xml
<CustomField>
    <fullName>Krow__Intacct_Record_Number__c</fullName>
    <label>Intacct Record Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>