force-app/main/default/objects/Krow__Project_Baseline__c/fields/Krow__Invoiced__c.field-meta.xml
<CustomField>
    <fullName>Krow__Invoiced__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Invoiced?</label>
    <type>Checkbox</type>
</CustomField>