force-app/main/default/objects/Krow__Project_Baseline__c/fields/Krow__JIRA_Project_Id__c.field-meta.xml
<CustomField>
    <fullName>Krow__JIRA_Project_Id__c</fullName>
    <description>Stores the jira project id.</description>
    <inlineHelpText>Stores the jira project id.</inlineHelpText>
    <label>JIRA Project Id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>