force-app/main/default/objects/Krow__Project_Baseline__c/fields/Krow__Krow_Project__c.field-meta.xml
<CustomField>
    <fullName>Krow__Krow_Project__c</fullName>
    <label>Klient Project</label>
    <referenceTo>Krow__Project__c</referenceTo>
    <relationshipLabel>Project Baseline</relationshipLabel>
    <relationshipName>Project_Baseline</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>