force-app/main/default/objects/Krow__Project_Baseline__c/fields/Krow__Load_in_gantt__c.field-meta.xml
<CustomField>
    <fullName>Krow__Load_in_gantt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Load in gantt</label>
    <type>Checkbox</type>
</CustomField>