force-app/main/default/objects/Krow__Project_Baseline__c/fields/Krow__Margin__c.field-meta.xml
<CustomField>
    <fullName>Krow__Margin__c</fullName>
    <label>Margin</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>