force-app/main/default/objects/Krow__Project_Baseline__c/fields/Krow__Margin_Percent__c.field-meta.xml
<CustomField>
    <fullName>Krow__Margin_Percent__c</fullName>
    <label>Margin Percent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>