force-app/main/default/objects/Krow__Project_Baseline__c/fields/Krow__Margin_Percent_Logged__c.field-meta.xml
<CustomField>
    <fullName>Krow__Margin_Percent_Logged__c</fullName>
    <label>Margin % (Logged)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>