force-app/main/default/objects/Krow__Project_Baseline__c/fields/Krow__Non_Billable_Hours__c.field-meta.xml
<CustomField>
    <fullName>Krow__Non_Billable_Hours__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Non-Billable Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>