force-app/main/default/objects/Krow__Project_Baseline__c/fields/Krow__Organization__c.field-meta.xml
<CustomField>
    <fullName>Krow__Organization__c</fullName>
    <label>Organization</label>
    <length>255</length>
    <type>Text</type>
</CustomField>