force-app/main/default/objects/Krow__Project_Baseline__c/fields/Krow__Planned_Hours__c.field-meta.xml
<CustomField>
    <fullName>Krow__Planned_Hours__c</fullName>
    <label>Deprecated4</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>