force-app/main/default/objects/Krow__Project_Baseline__c/fields/Krow__PO_Number__c.field-meta.xml
<CustomField>
    <fullName>Krow__PO_Number__c</fullName>
    <label>PO Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>