force-app/main/default/objects/Krow__Project_Baseline__c/fields/Krow__Practice__c.field-meta.xml
<CustomField>
    <fullName>Krow__Practice__c</fullName>
    <label>Practice</label>
    <length>255</length>
    <type>Text</type>
</CustomField>