force-app/main/default/objects/Krow__Project_Baseline__c/fields/Krow__Project_Budget__c.field-meta.xml
<CustomField>
    <fullName>Krow__Project_Budget__c</fullName>
    <label>Budgeted Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>