force-app/main/default/objects/Krow__Project_Baseline__c/fields/Krow__Project_Complete__c.field-meta.xml
<CustomField>
    <fullName>Krow__Project_Complete__c</fullName>
    <label>% Complete</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>