force-app/main/default/objects/Krow__Project_Baseline__c/fields/Krow__Project_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Krow__Project_End_Date__c</fullName>
    <label>Project End Date</label>
    <type>Date</type>
</CustomField>