force-app/main/default/objects/Krow__Project_Baseline__c/fields/Krow__Project_Status__c.field-meta.xml
<CustomField>
    <fullName>Krow__Project_Status__c</fullName>
    <label>Project Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
                <color>#BBBBBB</color>
                <default>true</default>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
                <color>#3366FF</color>
                <label>In Progress</label>
            </value>
            <value>
                <fullName>At Risk</fullName>
                <color>#FF0000</color>
                <label>At Risk</label>
            </value>
            <value>
                <fullName>Complete</fullName>
                <color>#33CC00</color>
                <label>Complete</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>