force-app/main/default/objects/Krow__Project_Baseline__c/fields/Krow__Public_Project_Template__c.field-meta.xml
<CustomField>
    <fullName>Krow__Public_Project_Template__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Public Project Template</label>
    <type>Checkbox</type>
</CustomField>