force-app/main/default/objects/Krow__Project_Baseline__c/fields/Krow__Rate_Card__c.field-meta.xml
<CustomField>
    <fullName>Krow__Rate_Card__c</fullName>
    <label>Rate Card</label>
    <length>255</length>
    <type>Text</type>
</CustomField>