force-app/main/default/objects/Krow__Project_Baseline__c/fields/Krow__Region__c.field-meta.xml
<CustomField>
    <fullName>Krow__Region__c</fullName>
    <label>Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>