force-app/main/default/objects/Krow__Project_Baseline__c/fields/Krow__Revenue_Backlog__c.field-meta.xml
<CustomField>
    <fullName>Krow__Revenue_Backlog__c</fullName>
    <label>Revenue Backlog</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>