force-app/main/default/objects/Krow__Project_Baseline__c/fields/Krow__Revenue_Template__c.field-meta.xml
<CustomField>
    <fullName>Krow__Revenue_Template__c</fullName>
    <label>Revenue Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>