force-app/main/default/objects/Krow__Project_Baseline__c/fields/Krow__Send_to_Intacct__c.field-meta.xml
<CustomField>
    <fullName>Krow__Send_to_Intacct__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send to Intacct</label>
    <type>Checkbox</type>
</CustomField>