force-app/main/default/objects/Krow__Project_Baseline__c/fields/Krow__Set_As_Baseline__c.field-meta.xml
<CustomField>
    <fullName>Krow__Set_As_Baseline__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Set As Baseline</label>
    <type>Checkbox</type>
</CustomField>