force-app/main/default/objects/Krow__Project_Baseline__c/fields/Krow__Slack_Channel_Id__c.field-meta.xml
<CustomField>
    <fullName>Krow__Slack_Channel_Id__c</fullName>
    <description>Slack channel id for this project.</description>
    <label>Slack Channel Id</label>
    <length>15</length>
    <type>Text</type>
</CustomField>