force-app/main/default/objects/Krow__Project_Baseline__c/fields/Krow__Sync_Result__c.field-meta.xml
<CustomField>
    <fullName>Krow__Sync_Result__c</fullName>
    <label>Sync Result</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>