force-app/main/default/objects/Krow__Project_Baseline__c/fields/Krow__Task_Template__c.field-meta.xml
<CustomField>
    <fullName>Krow__Task_Template__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Task Template</label>
    <type>Checkbox</type>
</CustomField>