force-app/main/default/objects/Krow__Project_Baseline__c/fields/Krow__Team_Lead__c.field-meta.xml
<CustomField>
    <fullName>Krow__Team_Lead__c</fullName>
    <label>Team Lead</label>
    <length>255</length>
    <type>Text</type>
</CustomField>