force-app/main/default/objects/Krow__Project_Baseline__c/fields/Krow__Total_Hours__c.field-meta.xml
<CustomField>
    <fullName>Krow__Total_Hours__c</fullName>
    <label>Actual Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>