force-app/main/default/objects/Krow__Project_Baseline__c/fields/Krow__Total_Hours_Logged__c.field-meta.xml
<CustomField>
    <fullName>Krow__Total_Hours_Logged__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Hours (Logged)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>